# Aethvion-Suite

./: .dockerignore  .env.example  .gitignore  Antigravity_Plan.md  CHANGELOG.md  COMMERCIAL_LICENSE.md  Claude_Plan.md  Dockerfile  LICENSE  README.md  Start_Aethvion.bat  Start_AethvionCLI.bat  Start_AethvionDev.bat  Start_AethvionWeb.bat  Start_Aethvion_Suite.bat  claude_feature_report_v1.md  pyproject.toml
.github/: CONTRIBUTING.md  SECURITY.md
.github/workflows/: python-checks.yml
aireports/: claude-aethvionsuite-report.md  claude-pm-benchmark-7-languages.md  claude-pm-benchmark-django-v2.md  claude-pm-benchmark-django.md  claude-pm-benchmark-report.md  claude-pm-benchmark-zod-typescript.md  gemini-aethvionsuite-report.md  gemini-pm-benchmark-django.md  pm-financial-impact-report.md
apps/audio/: Start_Audio.bat  __init__.py  audio_core.py  audio_server.py  tts_manager.py
apps/code/: Start_Code.bat  code_server.py
apps/driveinfo/: driveinfo_core.py  driveinfo_server.py
apps/finance/: Start_Finance.bat  finance_server.py
apps/hardwareinfo/: hardware_server.py
apps/kanban/: kanban_server.py
apps/linkmap/: linkmap_server.py
apps/overlay/: main.py
apps/photo/: Start_Photo.bat  photo_server.py
apps/tracking/: Start_Tracking.bat  bridge.py  osf_manager.py  tracking_core.py  tracking_server.py
apps/vtuber/: Start_VTuber.bat  auto_rigger.py  vtuber_server.py
benchmarks/: RESULTS.md  bench_aethviondb.py
core/: aether_core.py  cli.py  exceptions.py  launcher.py  main.py  nexus_core.py  setup_directories.bat  system_retrieval.py  updater.py  version.py
core/aethviondb/: __init__.py  aethviondb_routes.py  ai_runtime.py  backup.py  baker.py  chunker.py  config.py  db_registry.py  distiller.py  entity_schema.py  entity_writer.py  expansion_engine.py  file_manifest.py  folder_distiller.py  importer.py  kind_registry.py  name_index.py  snapshot.py  validator.py  vectorizer.py  wikipedia_distiller.py
core/ai/: call_contexts.py
core/automate/: __init__.py  automate_routes.py  compiler.py  executor.py
core/bridges/: bridge_manager.py  media_sentinel.py  registry.json  screen_capture.py  spotify_bridge.py  system_bridge.py  weather_bridge.py  web_search_bridge.py  webcam_capture.py
core/companions/: __init__.py  companion_creator_routes.py  companion_engine.py  companion_routes.py  registry.py
core/config/: aethvion.yaml  logging.yaml  memory.yaml  providers.yaml  security.yaml.example  settings_manager.py  suggested_apimodels.json  suggested_localaudiomodels.json  suggested_localmodels.json  suggested_models.json
core/devtools/: Launch_AutomateEditor.bat  Launch_CompanionEditor.bat  Launch_ModelEditor.bat  Launch_SuiteTester.bat  __init__.py
core/documentation/: README.md
core/factory/: agent_factory.py  agent_registry.py  agent_result.py  agent_spec.py  base_agent.py  generic_agent.py
core/forge/: __init__.py  tool_forge.py  tool_registry.py  tool_spec.py
core/memory/: __init__.py  agent_workspace_manager.py  episodic_memory.py  file_vector_store.py  history_manager.py  identity_manager.py  knowledge_graph.py  memory_spec.py  persistent_memory.py  social_registry.py  summarization.py
core/nexus/: nexus_manager.py  registry.json
core/orchestrator/: __init__.py  agent_events.py  agent_runner.py  agent_state.py  cancellation.py  chat_token_store.py  corp_manager.py  corp_worker_runner.py  file_ops_mixin.py  intent_analyzer.py  master_orchestrator.py  output_validator.py  persona_manager.py  project_mapper_tools.py  project_memory.py  (+4 more)
docs/: README.md
scratch/: test_schedule.py
setup/: update_to_latest.bat
tests/: __init__.py  conftest.py  test_aether_core.py  test_aethviondb_core.py  test_aethviondb_crud.py  test_companion_registry.py  test_provider_routing.py  test_security_scanner.py
(+684 files in other folders)
