[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aethvion-suite"
version = "0.0.0"  # placeholder — real version is auto-derived from git at runtime (see core/version.py)
description = "Aethvion Suite: An integrated agentic AI platform and application hub"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Aethvion" }
]
keywords = ["ai", "agents", "autonomous", "llm", "tool-generation", "multi-agent", "self-hosted"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    # Dual-licensed: AGPL-3.0 for open-source use; a separate Commercial License
    # is available for proprietary/commercial deployments. See COMMERCIAL_LICENSE.md.
    "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.10"
dependencies = [
    # AI Providers
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "tiktoken>=0.7.0",
    "requests>=2.31.0",

    # Web server
    "fastapi>=0.109.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",

    # Config & environment
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",

    # CLI
    "rich>=13.0.0",

    # System monitoring
    "psutil>=5.9.0",

    # Screen Capture & Multimedia
    "mss>=10.0.0",
    "opencv-python>=4.8.0",
    "spotipy>=2.23.0",

    # Web server extensions
    "python-multipart>=0.0.7",

    # Communication
    "discord.py>=2.3.0",

    # Computer Vision & Tracking
    "mediapipe>=0.10.0",

    # GUI Development
    "customtkinter>=5.2.0",
]

[project.optional-dependencies]
# auto — installed automatically at startup by the self-repair system.
# Add new optional node/feature packages here; existing installs self-heal.
auto = [
    "pytesseract",
    "Pillow",
]

# Windows-only native integrations (media session control, etc.)
# Installed automatically on Windows via Start_Aethvion.bat / the launcher.
# Linux/macOS users should NOT install this group.
windows = [
    "winrt-runtime",
    "winrt-Windows.Media.Control",
]

# The groups below are installed manually: pip install aethvion-suite[memory]
memory = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "networkx>=3.0",
]
local-llm = [
    "llama-cpp-python>=0.2.0",
    "huggingface-hub>=0.19.0",
    "sentence-transformers>=2.2.0",
]
dev = [
    "pytest>=7.0",
    "flake8>=6.0",
]
all = [
    "pytesseract",
    "Pillow",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "networkx>=3.0",
    "llama-cpp-python>=0.2.0",
    "huggingface-hub>=0.19.0",
    # Note: winrt-* is intentionally excluded from `all` — install [windows] explicitly
    # on Windows hosts only.
]

[project.scripts]
misaka = "core.main:main"
misaka-cli = "core.cli:main"

[project.urls]
Homepage = "https://github.com/Aethvion/Aethvion-Suite"
Repository = "https://github.com/Aethvion/Aethvion-Suite"
Documentation = "https://github.com/Aethvion/Aethvion-Suite/tree/main/core/documentation"
"Bug Tracker" = "https://github.com/Aethvion/Aethvion-Suite/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.setuptools.packages.find]
where = ["."]
exclude = [".venv*", "tests*", "outputfiles*", "logs*"]
